<resources>
    <string name="app_name">PlanFollower</string>

    <string name="tv_registerTitleText">Get Started</string>
    <string name="btn_registerButtonText">Register</string>
    <string name="btn_loginButtonText">Login</string>
    <string name="tv_loginTitleText">Welcome Again, Login First</string>
    <string name="hint_password">Password</string>
    <string name="hint_passwordConfirm">Password Again</string>
    <string name="hint_email">Email</string>
    <string name="hint_name">Name</string>
    <string name="hint_surname">Surname</string>
    <string name="tv_registerTextString">Don\'t you have an account? Sign up now.</string>
    <string name="tv_notesTitle">Note Title</string>
    <string name="tv_notesContent">Note Content</string>
    <string name="btn_saveNoteText">Save Note Changes</string>
    <string name="btn_shareNote">Share this note with a friend.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>